# ScanLab

./: .gitignore  README.md  nuxt.config.ts  package.json
.zed/: settings.json
app/: app.vue
app/assets/css/: main.css
app/components/: add-stage.vue  image-preview.vue  strip-bar.vue
app/components/file-open/: full-preview.vue  help-button.vue
app/components/filecrop/: preview.vue
app/components/filepick/: preview.vue
app/components/fileprocess/: stage.vue
app/components/fileprocess/stage/: item.vue
app/components/filerotate/: preview.vue
app/components/image/: grid.vue
app/components/layout/default/: preview.vue
app/components/ui/: button.vue  input.vue  modal-base.vue  modal-window.vue
app/composables/: modal-state.ts  useCommands.ts
app/layouts/: default.vue  open.vue  project.vue
app/pages/: crop.vue  index.vue  open.vue  rotate.vue  save.vue
app/services/: hardware.ts  image.ts
app/stores/: image-preview.ts  project.ts  scan.ts  scans.ts  stage-layers.ts  stages.ts  temp.ts
app/types/: index.ts
scripts/: bump.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: ImageInfo.ts  ImageMode.ts  OpenParams.ts  ProcessingStage.ts  RotateParams.ts  SaveParams.ts  SplitParams.ts  StageData.ts
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  stages.rs
src-tauri/src/app/: project.rs
src-tauri/src/pipeline/: mod.rs  open.rs  rotate.rs  save.rs
src-tauri/src/stages/: open.rs  rotate.rs  save.rs  split.rs
src-tauri/src/utils/: mod.rs  thumbnails.rs
(+3 files in other folders)
