[package]
name = "scan-lab"
version = "0.1.0"
description = "ScanLab"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
image = "0.25.6"
base64 = "0.22.1"
infer = "0.19.0"
names = { version = "0.14.0", default-features = false }
fast_image_resize = { version = "5.1.4", features = ["image"] }
dirs = "6.0.0"
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
